# QUICKeR

./: .gitignore  CMakeLists.txt  README.md
database/newSimpleServer/: .gitignore  AE_Nested_AES.c  AE_Nested_AES.h  Makefile  aes_ctr.c  aes_ctr.h  aes_gcm.c  aes_gcm.h  simple_client.c  simple_server.c
include/pkcs11/v2.40/: cloudhsm_pkcs11_vendor_defs.h  cryptoki.h  pkcs11f.h  pkcs11t.h
scripts/: Output.txt  analyze_logs.py  arguments.txt  client_machines_address.txt  convLogToStats.py  db_address.txt  experiment_parameters.txt  generate_address_files.py  get_hsm_ip.py  obtain_statistics.py  runExperimentsOnAWS.py  run_client.py  setup_client.py  start_instances.py  stop_instances.py  testRunMultiple.py  testfile.txt  update_machines_address.txt
scripts/pull/benchmark2/: 18.217.205.204_log.txt  18.219.84.96_log.txt  18.220.16.113_log.txt  18.222.106.82_log.txt  3.12.151.163_log.txt  3.12.152.78_log.txt  3.12.36.134_log.txt  3.128.197.127_log.txt  3.128.206.40_log.txt  3.133.108.136_log.txt  3.138.117.210_log.txt  3.138.118.248_log.txt  3.138.124.35_log.txt  3.14.141.128_log.txt  3.144.109.46_log.txt  3.144.109.51_log.txt  3.144.116.116_log.txt  3.145.11.25_log.txt  3.145.178.188_log.txt  3.145.18.31_log.txt  3.145.201.236_log.txt  3.145.33.193_log.txt  3.15.198.26_log.txt  3.15.2.161_log.txt
scripts/pull/benchmark4/: 13.59.116.134_log.txt  13.59.180.124_log.txt  18.116.38.228_log.txt  18.117.151.38_log.txt  18.117.154.235_log.txt  18.117.93.91_log.txt  18.118.154.140_log.txt  18.118.33.126_log.txt  18.119.135.142_log.txt  18.119.139.184_log.txt  18.119.139.232_log.txt  18.119.162.241_log.txt  18.188.120.183_log.txt  18.188.137.209_log.txt  18.191.140.228_log.txt  18.191.147.169_log.txt
src/actions/: CMakeLists.txt  actions.c  actions.h
src/cd_encryption/: AE_Nested_AES.c  AE_Nested_AES.h  CMakeLists.txt  aes_ctr.h  aes_gcm.c  aes_gcm.h
src/common/: CMakeLists.txt  common.c  common.h  gopt.c  gopt.h  pkcs11.c
src/hiredis_storage/: CMakeLists.txt  redis_storage.c  redis_storage.h
src/hsm_encryption/: CMakeLists.txt  aes.c  aes.h  hsm_aes_gcm.c  hsm_aes_gcm.h
src/main/: CMakeLists.txt  ciphertext_updates_naive.c  ciphertext_updates_updatable_encryption.c  populate_database_updatable.c  routine_operations_naive.c  routine_operations_updatable_encryption.c  test_update_round_workers.c  update_round_coordinator.c
