cmake_minimum_required(VERSION 2.8)
project(mainfile)

find_library(cloudhsmpkcs11 STATIC)
find_library(cd_encryption STATIC)
find_library(hsm_encryption STATIC)
find_library(hiredis_storage STATIC)
find_library(actions STATIC)



add_executable(routine_operations_naive routine_operations_naive.c)
target_link_libraries(routine_operations_naive cloudhsmpkcs11)
target_link_libraries(routine_operations_naive cd_encryption)
target_link_libraries(routine_operations_naive hsm_encryption)
target_link_libraries(routine_operations_naive hiredis_storage)
target_link_libraries(routine_operations_naive actions)


add_executable(ciphertext_updates_naive ciphertext_updates_naive.c)
target_link_libraries(ciphertext_updates_naive cloudhsmpkcs11)
target_link_libraries(ciphertext_updates_naive cd_encryption)
target_link_libraries(ciphertext_updates_naive hsm_encryption)
target_link_libraries(ciphertext_updates_naive hiredis_storage)
target_link_libraries(ciphertext_updates_naive actions)


add_executable(routine_operations_updatable_encryption routine_operations_updatable_encryption.c)
target_link_libraries(routine_operations_updatable_encryption cloudhsmpkcs11)
target_link_libraries(routine_operations_updatable_encryption cd_encryption)
target_link_libraries(routine_operations_updatable_encryption hsm_encryption)
target_link_libraries(routine_operations_updatable_encryption hiredis_storage)
target_link_libraries(routine_operations_updatable_encryption actions)


add_executable(ciphertext_updates_updatable_encryption ciphertext_updates_updatable_encryption.c)
target_link_libraries(ciphertext_updates_updatable_encryption cloudhsmpkcs11)
target_link_libraries(ciphertext_updates_updatable_encryption cd_encryption)
target_link_libraries(ciphertext_updates_updatable_encryption hsm_encryption)
target_link_libraries(ciphertext_updates_updatable_encryption hiredis_storage)
target_link_libraries(ciphertext_updates_updatable_encryption actions)


add_executable(populate_database_updatable populate_database_updatable.c)
target_link_libraries(populate_database_updatable cloudhsmpkcs11)
target_link_libraries(populate_database_updatable cd_encryption)
target_link_libraries(populate_database_updatable hsm_encryption)
target_link_libraries(populate_database_updatable hiredis_storage)
target_link_libraries(populate_database_updatable actions)
